--- a/src/main/webapp/les5/style.css
+++ b/src/main/webapp/les5/style.css
@@ -3,10 +3,57 @@ body {
 	color: #004D40;
 	margin: 0;
 	padding: 0;
+	font-family: ‘Palatino Linotype’, ‘Book Antiqua’, Palatino, serif;
+}
+
+#frame {
+	display: grid;
+	grid-template-rows: auto;
+	grid-template-columns: 50vw 50vw;
+}
+
+#myLocation {
+	grid-row-start: 1;
+	grid-row-end: 1;
+	grid-column-start: 1;
+	grid-column-end: 1;
+}
+
+#weatherInfo {
+	grid-row-start: 1;
+	grid-row-end: 1;
+	grid-column-start: 2;
+	grid-column-end: 2;
+}
+
+#countryList {
+	grid-row-start: 3;
+	grid-row-end: 3;
+	grid-column-start: 1;
+	grid-column-end: 3;
+}
+
+.content {
+	margin: 1vh 1vw;
+}
+
+@media screen and (max-width: 750px) {
+    #myLocation {
+		grid-row-start: 1;
+		grid-row-end: 1;
+		grid-column-start: 1;
+		grid-column-end: 3;
+	}
+	
+	#weatherInfo {
+		grid-row-start: 2;
+		grid-row-end: 2;
+		grid-column-start: 1;
+		grid-column-end: 3;
+	}
 }
 
 h2 {
-	width: 96vw;
 	padding: 1vh 1vw;
 	margin: 1vh 1vw;
 	background-color: #00695C;
@@ -15,6 +62,7 @@ h2 {
 
 ul {
 	list-style: none;
+	display: block;
 	padding: 0;
 }
 
@@ -43,8 +91,4 @@ table .item:hover {
 table td {
 	min-width: 200px;
 	white-space: nowrap;
-}
-
-.content {
-	margin: 0.5vh 1vw;
 }
